package SnakeLadder;

public interface BoardObject {
    int apply(int position);
}