package SnakeLadder;

public class EasyStrategy implements IStrategy {

    public boolean canPlay(Player player, int diceValue) {
        return true;
    }
}