package SnakeLadder;

public interface IStrategy {
    boolean canPlay(Player player, int diceValue);
}